<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnAttachObserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_attach_observer"/>

    <Button
        android:id="@+id/btnDetachObserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_detach_observer"/>

    <Button
        android:id="@+id/btnUsingOperatorsExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_using_operators"/>

    <Button
        android:id="@+id/btnAsynchronousExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_asynchronous"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>